--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,9 @@ dependencies {
     //Easy Permissions
     implementation 'pub.devrel:easypermissions:2.0.1'
 
+    //Bubble
+    implementation 'com.github.bijoysingh:floating-bubble:3.0.0'
+
     //Picasso
     implementation 'com.squareup.picasso:picasso:2.71828'
 
