porzucenie onBind service

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,6 @@
         android:roundIcon="@mipmap/ic_icon_car_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <service android:name=".FloatingService" />
         <activity
             android:name=".MainActivity"
             android:theme="@style/AppTheme.NoActionBar"></activity>
@@ -30,6 +29,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <service android:name="com.example.simpledriverassistant.FloatingService" />
     </application>
 
 </manifest>
