--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
-        android:name=".NotificationService"
+        android:name=".Support.NotificationService"
         android:allowBackup="true"
         android:icon="@mipmap/ic_icon_car"
         android:label="@string/app_name"
